[gd_scene load_steps=6 format=3 uid="uid://c6al88d6301l"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_hy6l0"]
[ext_resource type="PackedScene" uid="uid://cokct3u1euwr8" path="res://Building-Res/enviorment.tscn" id="2_g8sk5"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4cx64"]
sky_top_color = Color(0.0823529, 0.584314, 0.772549, 1)
sky_horizon_color = Color(0.535352, 0.65734, 0.700531, 1)
ground_bottom_color = Color(0.0590545, 0.0450471, 0.029574, 1)
ground_horizon_color = Color(0.535352, 0.65734, 0.700531, 1)

[sub_resource type="Sky" id="Sky_j360n"]
sky_material = SubResource("ProceduralSkyMaterial_4cx64")

[sub_resource type="Environment" id="Environment_scijb"]
background_mode = 2
sky = SubResource("Sky_j360n")
tonemap_mode = 2
glow_enabled = true

[node name="World" type="Node"]
script = ExtResource("1_hy6l0")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_scijb")

[node name="lights" type="Node" parent="."]

[node name="Sun" type="DirectionalLight3D" parent="lights"]
transform = Transform3D(0.713165, 0.537246, -0.450292, 0, 0.64236, 0.766403, 0.700996, -0.546572, 0.458109, 0.538952, 8.9414, -0.118779)
shadow_enabled = true

[node name="Floor" parent="." instance=ExtResource("2_g8sk5")]

[node name="Canvas_Layer" type="CanvasLayer" parent="."]

[node name="Main_Menu" type="MarginContainer" parent="Canvas_Layer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.0
offset_top = -318.0
offset_right = 392.0
offset_bottom = 318.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 220

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas_Layer/Main_Menu"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Canvas_Layer/Main_Menu/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Host" type="Button" parent="Canvas_Layer/Main_Menu/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="Canvas_Layer/Main_Menu/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="ip_input" type="LineEdit" parent="Canvas_Layer/Main_Menu/VBoxContainer"]
layout_mode = 2
placeholder_text = "127.0.0.1"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/character.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="Canvas_Layer/Main_Menu/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Canvas_Layer/Main_Menu/VBoxContainer/Join" to="." method="_on_join_pressed"]
